--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-cassandra-driver (3.1.1-0tcp1) trusty; urgency=medium
+
+  * New upstream version
+
+ -- Jiri Konecny <jiri.konecny@tcpcloud.eu>  Tue, 22 Mar 2016 15:22:00 +0100
+
 python-cassandra-driver (2.5.1-1) unstable; urgency=low
 
   * Initial release (Closes: #771065)
