--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-cassandra-driver (3.1.1-0tcp1) trusty; urgency=medium
+python-cassandra-driver (3.1.1-0tcp1) jessie; urgency=medium
 
   * New upstream version
 
