--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-cassandra-driver (3.1.1-0tcp4) trusty; urgency=medium
+
+  * new version
+
+ -- Filip Pytloun <filip@pytloun.cz>  Wed, 13 Apr 2016 11:21:13 +0200
+
 python-cassandra-driver (3.1.1-0tcp3) trusty; urgency=medium
 
   * Fix priority typo
