--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-cassandra-driver (3.1.1-0tcp6) trusty; urgency=medium
+
+  * Fix binary package name
+
+ -- Filip Pytloun <filip@pytloun.cz>  Wed, 05 Apr 2017 10:44:41 +0200
+
 python-cassandra-driver (3.1.1-0tcp5) trusty; urgency=medium
 
   * new version
