--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-cassandra-driver (3.1.1-0tcp7) trusty; urgency=medium
+
+  * Add dependencies on cython
+
+ -- Filip Pytloun <filip@pytloun.cz>  Wed, 05 Apr 2017 13:59:49 +0200
+
 python-cassandra-driver (3.1.1-0tcp6) trusty; urgency=medium
 
   * Fix binary package name
